# financial-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-colab.txt
config/: settings.yaml  trained_weights.json  watchlist.yaml
notebooks/: train_on_colab.ipynb
scripts/: backtest_multi_year.py  backtest_vs_benchmarks.py  backtest_year.py  build_universe_snapshots.py  calibrate.py  forecast_next_week.py  replay_2026.py  snapshot_prices.py  train_model.py
stochsignal/: __init__.py  config.py  logging_utils.py  scheduler.py
stochsignal/backtest/: __init__.py  harness.py  scoring.py
stochsignal/digest/: __init__.py  notifier.py  renderer.py
stochsignal/digest/templates/: email.html  email.txt
stochsignal/ingest/: __init__.py  cache.py  news.py  prices.py  sector.py  snapshot_loader.py  trends.py
stochsignal/model/: __init__.py  chaos.py  gbm.py  heston.py  kelly.py  perturbation.py  train.py  waves.py
stochsignal/universe/: __init__.py  adaptive.py  seed_pool.py
tests/: test_cache.py  test_gbm.py  test_perturbation.py  test_prices.py
